javaDSL/src/test/resources/typeSystemTestModels/invalid/annotations/AnnotationMethodReturnType.java
/* (c) https://github.com/MontiCore/monticore */

package resources.typeSystemTestModels.invalid.annotations;

import java.lang.*;

public class AnnotationMethodReturnType {

  @interface InvalidMethodReturnType {
    Integer getInteger();
  }

}
